// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAst accept Acorn plugins 1`] = `
Node {
  "body": Array [
    Node {
      "end": 5,
      "expression": Node {
        "children": Array [],
        "closingElement": null,
        "end": 5,
        "openingElement": Node {
          "attributes": Array [],
          "end": 5,
          "name": Node {
            "end": 2,
            "name": "X",
            "start": 1,
            "type": "JSXIdentifier",
          },
          "selfClosing": true,
          "start": 0,
          "type": "JSXOpeningElement",
        },
        "start": 0,
        "type": "JSXElement",
      },
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 5,
  "sourceType": "module",
  "start": 0,
  "type": "Program",
}
`;

exports[`getAst return AST 1`] = `
Node {
  "body": Array [
    Node {
      "end": 2,
      "expression": Node {
        "end": 2,
        "raw": "42",
        "start": 0,
        "type": "Literal",
        "value": 42,
      },
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 2,
  "sourceType": "module",
  "start": 0,
  "type": "Program",
}
`;
